--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,9 +1,20 @@
-.img-carousel{
+.img-carousel {
     height: 480px;
     object-fit: cover;
 }
 
-.caixa-avatar{
+.card-posicao-img {
+    height: 300px;
+    object-fit: cover;
+}
+
+.caixa-avatar {
     margin: 15px;
     width: 18rem;
+    background-color:rgb(165, 178, 190);
+}
+
+.btn-cor {
+    background-color: #083d84;
+    color: aliceblue;
 }
