--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,3 +18,11 @@
     background-color: #083d84;
     color: aliceblue;
 }
+
+.logo-image{
+    width: 125px;
+    height: 46px;
+    border-radius: 20%;
+    overflow: hidden;
+    margin-top: -6px;
+}
