melhoria no posicionamento do gif

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,6 +2,10 @@
     object-position: 0 -9px;
 }
 
+.gif-carousel {
+    object-position: 0 -144px;
+}
+
 .img-carousel {
     height: 480px;
     object-fit: cover;
